# ibank-autotests

./: .gitignore  Jenkinsfile  README.md  pyproject.toml
client/: ibank_client.py
test/helpdesk/: test_1.py
